# goit-pythonweb-hw-10

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 14132c720d25_add_verification_token_to_users.py
src/api/: auth.py  contacts.py
src/auth/: handlers.py  jwt.py  jwt_utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  cloudinary_service.py  email.py  redis_client.py
